<resources>
    <string name="app_name">Weather</string>
    <string name="date_and_location">Monday \n SPB, Russia</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
</resources>