<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:theme="@style/DayTheme"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/DateAndLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_and_location"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/TodayWeatherIcon"
        app:layout_constraintStart_toStartOf="@+id/TodayWeatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/TodayTemperatureText" />

    <TextView
        android:id="@+id/TodayTemperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="33° C"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/TodayWeatherIcon"
        app:layout_constraintStart_toStartOf="@+id/TodayWeatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/TodayWeatherIcon" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/TodayWeatherIcon"
        app:layout_constraintStart_toStartOf="@+id/TodayWeatherIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/TuesdayWeatherIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/DateAndLocation"
        app:srcCompat="@drawable/sun" />

    <ImageView
        android:id="@+id/WednesdayTemperatureIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateAndLocation"
        app:srcCompat="@drawable/rain" />

    <ImageView
        android:id="@+id/WindSpeedIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TodayWeatherIcon"
        app:srcCompat="@drawable/wind_speed" />

    <ImageView
        android:id="@+id/HumidityIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TodayWeatherIcon"
        app:srcCompat="@drawable/humidity" />

    <ImageView
        android:id="@+id/TodayWeatherIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/clouds" />

    <TextView
        android:id="@+id/HumidityNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/HumidityIcon"
        app:layout_constraintEnd_toEndOf="@+id/HumidityIcon"
        app:layout_constraintStart_toStartOf="@+id/HumidityIcon" />

    <TextView
        android:id="@+id/WindSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/WindSpeedIcon"
        app:layout_constraintEnd_toEndOf="@+id/WindSpeedIcon"
        app:layout_constraintStart_toStartOf="@+id/WindSpeedIcon" />

    <TextView
        android:id="@+id/TuesdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <TextView
        android:id="@+id/WednesdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TodayTemperatureText"
        app:layout_constraintStart_toStartOf="@+id/TodayTemperatureText"
        app:layout_constraintTop_toBottomOf="@+id/DateAndLocation"
        app:srcCompat="@drawable/snow" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateAndLocation"
        app:srcCompat="@drawable/sun_and_rain" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/WednesdayTemperatureIcon"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/DateAndLocation"
        app:srcCompat="@drawable/sun_and_cloud" />

    <TextView
        android:id="@+id/SaturdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/WednesdayTemperatureIcon"
        app:layout_constraintStart_toStartOf="@+id/WednesdayTemperatureIcon"
        app:layout_constraintTop_toBottomOf="@+id/WednesdayTemperatureIcon" />

    <TextView
        android:id="@+id/FridayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/ThursdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        app:layout_constraintEnd_toEndOf="@+id/TuesdayWeatherIcon"
        app:layout_constraintStart_toStartOf="@+id/TuesdayWeatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/TuesdayWeatherIcon" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="69%"
        app:layout_constraintEnd_toEndOf="@+id/HumidityIcon"
        app:layout_constraintStart_toStartOf="@+id/HumidityIcon"
        app:layout_constraintTop_toBottomOf="@+id/HumidityIcon" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="16 km/h"
        app:layout_constraintEnd_toEndOf="@+id/WindSpeedIcon"
        app:layout_constraintStart_toStartOf="@+id/WindSpeedIcon"
        app:layout_constraintTop_toBottomOf="@+id/WindSpeedIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>